# back-pair

./: README.md  index.html  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-04-28-145806_create_profiles_and_pairfolders/: down.sql  up.sql
src-tauri/migrations/2025-05-06-145804_create_history/: up.sql
src-tauri/src/: app_error.rs  commands.rs  db.rs  dtos.rs  lib.rs  main.rs  modules.rs  services.rs  utils.rs
src-tauri/src/commands/: backup_command.rs  profile_command.rs
src-tauri/src/db/: db.rs  modules.rs  schema.rs
src-tauri/src/dtos/: backup_finished.rs  backup_progress.rs  history_dtos.rs  pairfolder_dtos.rs  profile_dtos.rs  profile_with_folders.rs
src-tauri/src/services/: backup_service.rs  event_service.rs  pairfolder_service.rs  profile_service.rs
src-tauri/src/services/db/: history_service.rs  pairfolder_service.rs  profile_service.rs
src/components/: ConfirmDialog.tsx  ProfileCard.tsx  Updater.tsx  app-sidebar.tsx
src/components/ui/: button.tsx
src/contexts/: AppProvider.tsx  BackupContext.ts  CurrentTabContext.ts  ProfilesContext.ts
src/tabs/: AddProfile.tsx  Backup.tsx  History.tsx  Profiles.tsx  RunBackup.tsx
src/types/: enums.ts  types.ts
src/utils/: helper.ts
