[package]
name = "back-pair"
version = "0.1.2"
description = "A fast and simple backup tool built with Tauri, Rust and React for managing folder-to-folder backups using profiles."
authors = ["Ayoub Touba"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "back_pair_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dirs = "6.0.0"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
diesel_migrations = "2.0.0"
chrono = { version = "0.4.24", features = ["serde"] }
fs_extra_back_pair = { git = "https://github.com/AyubTouba/fs_extra_back_pair" }
uuid = "1.16.0"
thiserror = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
